--- a/ClassLibrary1/DesignPattern.csproj
+++ b/ClassLibrary1/DesignPattern.csproj
@@ -38,8 +38,82 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractFactory\AbstractFactory.cs" />
+    <Compile Include="AbstractFactory\Client1.cs" />
+    <Compile Include="AbstractFactory\GuanDongFactory.cs" />
+    <Compile Include="AbstractFactory\GuanDongYaBo.cs" />
+    <Compile Include="AbstractFactory\GuanDongYaJia.cs" />
+    <Compile Include="AbstractFactory\GuanXiFactory.cs" />
+    <Compile Include="AbstractFactory\GuanXiYaBo.cs" />
+    <Compile Include="AbstractFactory\GuanXiYaJia.cs" />
+    <Compile Include="AbstractFactory\YaBo.cs" />
+    <Compile Include="AbstractFactory\YaJia.cs" />
+    <Compile Include="AdapterPattern\Client.cs" />
+    <Compile Include="AdapterPattern\IThreeHole.cs" />
+    <Compile Include="AdapterPattern\PowerAdapter.cs" />
+    <Compile Include="AdapterPattern\TwoHole.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="BridgePattern\ChangHong.cs" />
+    <Compile Include="BridgePattern\Client.cs" />
+    <Compile Include="BridgePattern\ConcreteRemote.cs" />
+    <Compile Include="BridgePattern\RemoteControl.cs" />
+    <Compile Include="BridgePattern\Samsung.cs" />
+    <Compile Include="BridgePattern\TV.cs" />
+    <Compile Include="BuilderPattern\Builder.cs" />
+    <Compile Include="BuilderPattern\Builder1.cs" />
+    <Compile Include="BuilderPattern\Builder2.cs" />
+    <Compile Include="BuilderPattern\Client2.cs" />
+    <Compile Include="BuilderPattern\Computer.cs" />
+    <Compile Include="BuilderPattern\Director.cs" />
+    <Compile Include="CommandPattern\Client.cs" />
+    <Compile Include="CommandPattern\Command.cs" />
+    <Compile Include="CommandPattern\ConcreteCommand.cs" />
+    <Compile Include="CommandPattern\Invoke.cs" />
+    <Compile Include="CommandPattern\Receiver.cs" />
+    <Compile Include="CompositePattern\Circle.cs" />
+    <Compile Include="CompositePattern\ComplexGraphics.cs" />
+    <Compile Include="CompositePattern\Graphics.cs" />
+    <Compile Include="CompositePattern\Line.cs" />
+    <Compile Include="DecoratorPattern\Accessories.cs" />
+    <Compile Include="DecoratorPattern\ApplePhone.cs" />
+    <Compile Include="DecoratorPattern\Client.cs" />
+    <Compile Include="DecoratorPattern\Decorator.cs" />
+    <Compile Include="DecoratorPattern\Phone.cs" />
+    <Compile Include="DecoratorPattern\Sticker.cs" />
+    <Compile Include="FacadePattern\Client.cs" />
+    <Compile Include="FacadePattern\NotifyStudent.cs" />
+    <Compile Include="FacadePattern\RegisterCourse.cs" />
+    <Compile Include="FacadePattern\RegistrationFacade.cs" />
+    <Compile Include="FactoryMethod\Client.cs" />
+    <Compile Include="FactoryMethod\Creator.cs" />
+    <Compile Include="FactoryMethod\ShreddedPorkWithPotatoesFactory.cs" />
+    <Compile Include="FactoryMethod\TomatoScrambledEggsFactory.cs" />
+    <Compile Include="FlyweightPattern\Client.cs" />
+    <Compile Include="FlyweightPattern\ConcreteFlyweight.cs" />
+    <Compile Include="FlyweightPattern\Flyweight.cs" />
+    <Compile Include="FlyweightPattern\FlyweightFactory.cs" />
+    <Compile Include="IteratorPattern\Client.cs" />
+    <Compile Include="IteratorPattern\ConcreteIterator.cs" />
+    <Compile Include="IteratorPattern\ConcreteList.cs" />
+    <Compile Include="IteratorPattern\IListCollection.cs" />
+    <Compile Include="IteratorPattern\Iterator.cs" />
+    <Compile Include="PrototypePattern\Client.cs" />
+    <Compile Include="PrototypePattern\ConcretePrototype.cs" />
+    <Compile Include="PrototypePattern\MonkeyKingPrototype.cs" />
+    <Compile Include="ProxyPattern\Client.cs" />
+    <Compile Include="ProxyPattern\Friend.cs" />
+    <Compile Include="ProxyPattern\Person.cs" />
+    <Compile Include="ProxyPattern\RealBuyPerson.cs" />
+    <Compile Include="SimpleFactory\Customer.cs" />
+    <Compile Include="SimpleFactory\Food.cs" />
+    <Compile Include="SimpleFactory\FoodSimpleFactory.cs" />
+    <Compile Include="SimpleFactory\ShreddedPorkWithPotatoes.cs" />
+    <Compile Include="SimpleFactory\TomatoScrambledEggs.cs" />
     <Compile Include="Singleton\Singleton.cs" />
+    <Compile Include="TemplateMethod\ChineseCabbage.cs" />
+    <Compile Include="TemplateMethod\Client.cs" />
+    <Compile Include="TemplateMethod\Spinach.cs" />
+    <Compile Include="TemplateMethod\Vegetabel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
